Introduce BNCT problem

--- a/prelim/bibliography.bib
+++ b/prelim/bibliography.bib
@@ -189,10 +189,21 @@
     url       = {https://doi.org/10.1038/s41586-020-2649-2}
 }
 
-CNPy
+% CNPy
 @misc{cnpy,
     title  = {CNPy software package},
     author = {Carl Rogers},
     year   = {2018},
     url    = {https://github.com/rogersce/cnpy}
+}
+
+% IAEA NCT
+@book{iaea2001,
+    title     = {Current status of neutron capture therapy},
+    series    = {TECDOC Series},
+    number    = {1223},
+    year      = {2001},
+    url       = {https://www.iaea.org/publications/6168/current-status-of-neutron-capture-therapy},
+    publisher = {International Atomic Energy Agency},
+    address   = {Vienna}
 }
